<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_liked_number">Number of likes</string>
    <string name="description_shared_number">Number of shared</string>
    <string name="description_viewed_number">Number of views</string>
    <string name="options_remove">Remove</string>
    <string name="post_hint">Post text</string>
    <string name="save_post_button">Save post button</string>
    <string name="empty_content_toast">Content can\'t be empty</string>
    <string name="options_edit">Edit</string>
    <string name="play_video_button">Play video button</string>
    <string name="video_image">Video image</string>
    <string name="add_post_button">Add post button</string>
    <string name="choose_play_video_app">Choose play video app</string>
    <string name="google_play_unavailable">NMedia won\'t run without Google Play services, which are not supported by your device</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_new_post">User %1$s has published a new post</string>
</resources>